--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
         "squizlabs/php_codesniffer": "^3.8",
         "symfony/var-dumper": "^6.4"
     },
+    "bin": [
+        "player"
+    ],
     "license": "MIT",
     "autoload": {
         "psr-4": {
