--- a/composer.json
+++ b/composer.json
@@ -1,33 +1,37 @@
 {
-    "name": "juliana-saran/clean-arch-checker",
-    "type": "library",
-    "require": {
-        "ext-json": "*"
+  "name": "tcds-io/php-layer",
+  "type": "library",
+  "require": {
+    "ext-json": "*"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^10.5",
+    "phpstan/phpstan": "^1.10",
+    "squizlabs/php_codesniffer": "^3.8",
+    "symfony/var-dumper": "^6.4"
+  },
+  "bin": [
+    "player"
+  ],
+  "license": "MIT",
+  "autoload": {
+    "psr-4": {
+      "Tcds\\Io\\Player\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tcds\\Io\\Player\\": "tests/"
+    }
+  },
+  "authors": [
+    {
+      "name": "Juliana Saran",
+      "email": "julianasarans@gmail.com"
     },
-    "require-dev": {
-        "phpunit/phpunit": "^10.5",
-        "phpstan/phpstan": "^1.10",
-        "squizlabs/php_codesniffer": "^3.8",
-        "symfony/var-dumper": "^6.4"
-    },
-    "bin": [
-        "player"
-    ],
-    "license": "MIT",
-    "autoload": {
-        "psr-4": {
-            "JulianaSaran\\CleanArchChecker\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "JulianaSaran\\CleanArchChecker\\": "tests/"
-        }
-    },
-    "authors": [
-        {
-            "name": "Juliana Saran",
-            "email": "julianasarans@gmail.com"
-        }
-    ]
+    {
+      "name": "Thiago Cordeiro",
+      "email": "source@tcds.io"
+    }
+  ]
 }
