--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "name": "tcds-io/php-layer",
   "type": "library",
   "require": {
-    "ext-json": "*"
+    "ext-json": "*",
+    "symfony/console": ">6.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^10.5",
