--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,18 @@
   "require-dev": {
     "phpunit/phpunit": "^10.5",
     "phpstan/phpstan": "^1.10",
-    "squizlabs/php_codesniffer": "^3.8",
-    "symfony/var-dumper": "^6.4"
+    "symfony/var-dumper": "^6.4",
+    "slevomat/coding-standard": "^8.15"
+  },
+  "scripts": {
+    "cs:check": "vendor/bin/phpcs --colors -ps",
+    "test:stan": "vendor/bin/phpstan analyse src --level=max --ansi",
+    "test:unit": "vendor/bin/phpunit --testdox --color=always",
+    "tests": [
+      "@cs:check",
+      "@test:stan",
+      "@test:unit"
+    ]
   },
   "bin": [
     "player"
@@ -34,5 +44,10 @@
       "name": "Thiago Cordeiro",
       "email": "source@tcds.io"
     }
-  ]
+  ],
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": false
+    }
+  }
 }
