--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,10 @@
 {
   "name": "tcds-io/php-layer",
   "type": "library",
+  "description": "PHP Tool to validate domain boundaries",
   "require": {
     "ext-json": "*",
-    "symfony/console": ">6.0"
+    "symfony/console": "^6.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^10.5",
