--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,12 @@
   "description": "PHP Tool to validate domain boundaries",
   "require": {
     "ext-json": "*",
-    "symfony/console": "^6.0"
+    "symfony/console": "^6.0|^7.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^10.5",
     "phpstan/phpstan": "^1.10",
-    "symfony/var-dumper": "^6.4",
+    "symfony/var-dumper": "^7.0",
     "slevomat/coding-standard": "^8.15"
   },
   "scripts": {
